<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mdl.sinlov.android.updater.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_main_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_check_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_check_update" />

        <Button
            android:id="@+id/btn_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_update" />

        <Button
            android:id="@+id/btn_update_silent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_update_silent" />

        <Button
            android:id="@+id/btn_update_forcibly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_update_forcibly" />

        <Button
            android:id="@+id/btn_update_forcibly_ui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_update_forcibly_ui" />

        <Button
            android:id="@+id/btn_change_download_click_string"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_change_download_click_string" />

        <Button
            android:id="@+id/btn_change_download_click_call_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_change_download_click_call_back" />


    </LinearLayout>

</ScrollView>
